<resources>
    <string name="app_name">MisaChat</string>

    <string name="title_email">Email</string>
    <string name="title_password">Contraseña</string>
    <string name="required">* Requerido</string>
    <string name="register">Registrarse</string>
    <string name="login">Acceder</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="btn_google">Continuar con Google</string>
    <string name="prefs_file">com.example.misachat.PREFERENCE_FILE_KEY</string>
    <string name="btn_facebook">Continuar con Facebook</string>
    <string name="hint_chat">Email para chatear</string>
    <string name="btn_chatear">Chatear</string>
    <string name="text_message">Mensaje</string>
</resources>